regression: Choice vertical scrollbar is not seen when the item in the choice is increased more than

XMLWordPrintable

    • b26
    • x86
    • windows_xp

        When the items in the choice is increase more than the default size, the vertical scrollbar should be visible, but this is not happens in jdk7.0 . I add 30 items to the choice, the veritical scrollbar is not seen, but veritical scrollbar is seen, when i add the 31st element to the choice.

        Step to reproduce:
        -------------------
        1. Run the attached program.
        2) Click on the Choice, If you dn't see the vertical scrollbar , then the reproduced.

        This works fine in jdk 6.0 b104 , but fails in jdk7.0 b04 ( the build i have). The happens only in windows. Since it works fine in jdk6.0 & fails in jkd7.0 , so its a regression.

              Assignee:
              Denis Fokin (Inactive)
              Reporter:
              Lawrence Premkumar1 (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: