6516404: regression: Choice vertical scrollbar is not seen when the item in the choice is increased more than

Reviewed-by: art, dav